# ave-intelligence

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRACT.md  HANDOFF-PHASE1.md  README.md  ROADMAP.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: DATA-SOURCES.md  DESIGN-SYSTEM.md  WEB-INTEGRATION.md
projects/recommendation_engine/: CLAUDE.md  README.md  pyproject.toml
projects/recommendation_engine/src/recommendation_engine/: __init__.py
projects/reports/: CLAUDE.md  README.md  pyproject.toml
projects/reports/src/ave_reports/: __init__.py
projects/resort_pricing/: CLAUDE.md  README.md  pyproject.toml
projects/resort_pricing/src/resort_pricing/: __init__.py
projects/tourism_forecasting/: CLAUDE.md  README.md  pyproject.toml
projects/tourism_forecasting/src/tourism_forecasting/: __init__.py  backtest.py  config.py  data.py  features.py  pipeline.py
projects/tourism_forecasting/src/tourism_forecasting/models/: __init__.py  base.py  prophet_model.py  sarimax.py  seasonal_naive.py  xgb.py
projects/tourism_forecasting/tests/: test_forecasting.py
published/: README.md  manifest.json
published/forecasts/sarima/12m/: v1.json  v2.json
published/meta/: forecast.schema.json  manifest.schema.json  report.schema.json  series.schema.json
published/reports/: _example.mdx  maldives-accommodation-mix-shift.mdx  maldives-demand-elasticities.mdx  maldives-source-market-reshuffle.mdx  maldives-tourism-2026.mdx
published/series/arrivals_china/MV/: v1.json
published/series/arrivals_germany/MV/: v1.json
published/series/arrivals_india/MV/: v1.json
published/series/arrivals_italy/MV/: v1.json
published/series/arrivals_russia/MV/: v1.json
published/series/arrivals_total/MV/: v1.json  v2.json  v3.json
published/series/arrivals_total_annual/MV/: v1.json
published/series/arrivals_uk/MV/: v1.json
published/series/bednights_guesthouses/MV/: v1.json
published/series/bednights_hotels/MV/: v1.json
published/series/bednights_resorts/MV/: v1.json
published/series/bednights_safari/MV/: v1.json
scripts/: backfill_annual_mma.py  backfill_arrivals.py  demand_elasticities.py  forecast_arrivals.py  mixshift_bednights.py  publish_r2.sh  publish_report.py  source_markets.py
