[project]
name = "recommendation-engine"
version = "0.1.0"
description = "Project C — traveler recommendation / segmentation engine."
requires-python = ">=3.12"
dependencies = ["ave-core", "scikit-learn>=1.5"]

[tool.uv.sources]
ave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommendation_engine"]
