[project]
name = "ave-reports"
version = "0.1.0"
description = "Project D — narrative report builder (MDX + PDF) synthesizing Projects A–C."
requires-python = ">=3.12"
dependencies = ["ave-core", "jinja2>=3.1"]

[tool.uv.sources]
ave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ave_reports"]
