[project]
name = "resort-pricing"
version = "0.1.0"
description = "Project B — what drives Maldives resort pricing (ADR)."
requires-python = ">=3.12"
dependencies = ["ave-core", "statsmodels>=0.14", "scikit-learn>=1.5"]

[tool.uv.sources]
ave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resort_pricing"]
