[project]
name = "tourism-forecasting"
version = "0.1.0"
description = "Project A — Maldives monthly tourist-arrival demand forecasting."
requires-python = ">=3.12"
dependencies = [
  "ave-core",
  "statsmodels>=0.14",
  "prophet>=1.1",
  "xgboost>=2.1",
  "scikit-learn>=1.5",
]

[tool.uv.sources]
ave-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tourism_forecasting"]
